2013-08-20  Sergey Poznyakoff  <gray@gnu.org>

	* info/info.h (add_pointer_to_array): Use x2nrealloc.
	Remove sixth argument.  All uses updated.
	(maybe_free): Remove.  Use free() instead.  All uses
	updated.

2013-08-20  Karl Berry  <karl@gnu.org>

	* configure.ac (AM_INIT_AUTOMAKE): require 1.14 for info-in-builddir.
	Noted by Patrice.

	* doc/texinfo.tex (\sectionheading): must do
	\global\let\prevsectiondefs, since we're inside a group.
	Otherwise, \thissection is lost in PDF output if an xref intervenes
	due to the color \mark.  Report from Thien-Thi Nguyen, 
	16 Feb 2013 12:06:17.

2013-08-20  Sergey Poznyakoff  <gray@gnu.org>

	Check for I/O errors when dumping nodes to file.
	Use a general-purpose interface for storing and looking up in
	a list of names.

	* info/info-utils.c (info_namelist_add)
	(info_namelist_free): New functions.
	* info/info-utils.h: Likewise.
	* info/info.c (namelist_add,namelist_free): Move to
	info-utils.c, redeclare as extern.
	(all_files): Update accordingly.
	* info/session.c [VERBOSE_NODE_DUMPING]: Replace with
	calls to debug.
	(write_node_to_stream)
	(dump_node_to_stream): Return error code.
	(dump_nodes_to_file): Check for I/O errors,
	(dumped_already): Change data type to struct
	info_namelist_entry *.
	(dumped_already_index, dumped_already_slots): Remove.
	(initialize_dumping): Rewrite.

2013-08-20  Sergey Poznyakoff  <gray@gnu.org>

	Bind display-file to C-g in vi mode.

	* info/infomap.c (default_vi_like_info_keys): Bind display-file to
	C-g and abort to C-c.
	* info/session.c (info_gc_file_buffers): Fix null pointer dereference.
	* NEWS: Update.

2013-08-19  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (@t{@@unnumbered @@appendix}): mention special
	Docbook output for acknowledgements, colophon, etc.

2013-08-19  Sergey Poznyakoff  <gray@gnu.org>

	New interactive command "display-file".

	* info/session.c (info_display_file): New command.
	* info/infomap.c: Bind '=' to display-file.
