@@ -315,7 +315,7 @@ static unsigned char default_emacs_like_info_keys[] =
   '8', NUL,                       A_info_menu_digit,
   '9', NUL,                       A_info_menu_digit,
   '<', NUL,                       A_info_first_node,
-  '=', NUL,                       A_info_display_file,
+  '=', NUL,                       A_info_display_file_info,
   '>', NUL,                       A_info_last_node,
   '?', NUL,                       A_info_get_help_window,
   '[', NUL,                       A_info_global_prev_node,
@@ -581,7 +581,7 @@ static unsigned char default_vi_like_info_keys[] =
   CONTROL('d'), NUL,              A_info_scroll_half_screen_down,
   CONTROL('e'), NUL,              A_info_down_line,
   CONTROL('f'), NUL,              A_info_scroll_forward_page_only,
-  CONTROL('g'), NUL,              A_info_display_file,
+  CONTROL('g'), NUL,              A_info_display_file_info,
   CONTROL('k'), NUL,              A_info_up_line,
   CONTROL('l'), NUL,              A_info_redraw_display,
   CONTROL('n'), NUL,              A_info_down_line,
