@@ -1,3 +1,14 @@
+2013-08-22  Karl Berry  <karl@gnu.org>
+
+	* info/infomap.c (default_{emacs,vi}_like_info_keys),
+	* info/session.c (info_display_file_info): rename from
+	info_display_file.
+	* NEWS: mention display-file-info.
+	* doc/info-stnd.texi (Invoking Info): mention new debugging level,
+	more about -f.
+	(Miscellaneous Commands): document =.
+	* info/info.c (info_short_help): mention -1 for all debugging.
+
 2013-08-20  Sergey Poznyakoff  <gray@gnu.org>
 
 	* info/info.h (add_pointer_to_array): Use x2nrealloc.
